--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <div class="row text-center">
           <div class="col-12">
             <h2 class="this-week">This week</h2>
-            <div class="row gy-4">
+            <div class="row gy-4 wrapper-2">
               <div class="col days">
                 Fri <br />
                 ⛅ <br />
