--- a/index.html
+++ b/index.html
@@ -1,116 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="src/style.css" />
-    <script
-      src="https://kit.fontawesome.com/4a011261d8.js"
-      crossorigin="anonymous"
-    ></script>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/4a011261d8.js"crossorigin="anonymous"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-      crossorigin="anonymous"
-    />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous"/>
+    <link rel="stylesheet" href="src/style.css">
     <title>Weather App</title>
-  </head>
-  <body>
+</head>
+<body>
     <div class="app">
-      <div class="container">
-        <div class="current-location"><a href="#" class="current-location-btn"><i class="fa-solid fa-house"></i></a></i></div>
-        <div class="row">
-          <div class="col text-center">
-            <div class="col">
-              <form class="input-group">
-                <input
-                  type="search"
-                  class="form-control rounded"
-                  placeholder="Enter a city"
-                  aria-label="Search"
-                  aria-describedby="search-addon"
-                  id="search-form"
-                />
-                <input type="submit" value="Search" class="search-button rounded" />
-              </form>
+        <div class="wrapper-1">
+            <div class="current-location"><a href="#" class="current-location-btn"><i class="fa-solid fa-house"></i></a></i></div>
+            <form class="input-group">
+                <input type="search" class="form-control" placeholder="Enter a city" id="search-form"/>
+                <input type="submit" value="Search" class="search-button" />
+            </form>
+        </div>
+        <div class="wrapper-2">
+            <div class="block-1">
+                <h1 id="city">Lviv, UA</h1>
+            <h2 id="day-hour">Thursday 15:44</h2>
+            <div class="current-weather">
+                <div class="weather-emoji"><img src="img/sun.png" alt="sunny emoji"></div>
+                <div class="current-temperature"><span id="current-temperature-value">19</span>°C</div>
             </div>
-          </div>
-        </div>
-        <div class="wrapper">
-        <div class="row">
-          <div class="col-6 text-center">
-            <br />
-            <h1 id="city">Lviv, UA</h1>
-          </div>
-          <div class="row">
-            <div class="col-6 text-center">
-              <h2 id="day-hour">Thursday 5 May</h2>
             </div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-6 text-center current-weather">
-            ☀️ <span id="current-temperature-value">19</span>°C
-          </div>
-          <div class="col-2">
-            <span id="highest-temp">20</span>°C <br />
-            High <br /><br /><span id="lowest-temp">4</span>°C <br />
-            Low
-          </div>
-          <div class="col-2">
-            <span id="wind">10</span> km/h<br />
-            Wind <br /><br /><span id="feels-like">0</span>°C <br />
-            Feels Like
-          </div>
-          <div class="col-2">
-            <span id="humidity"></span>% <br />
-            Humidity <br /><br /><span id="pressure"></span> inHg <br />
-            Pressure
-          </div>
-        </div>
-        </div>
-        <div class="row text-center">
-          <div class="col-12">
-            <h2 class="this-week">This week</h2>
-            <div class="row gy-4 wrapper-2">
-              <div class="col days">
-                Fri <br />
-                ⛅ <br />
-                <span class="temperature"><b>21°C</b>/9°C</span>
-              </div>
-              <div class="col days">
-                Sat <br />
-                🌧 <br />
-                <span class="temperature"><b>18°C</b>/11°C</span>
-              </div>
-              <div class="col days">
-                Sun<br />
-                ⛅ <br />
-                <span class="temperature"><b>20°C</b>/9°C</span>
-              </div>
-              <div class="col days">
-                Mon <br />
-                🌧 <br />
-                <span class="temperature"><b>17°C</b>/8°C</span>
-              </div>
-              <div class="col days">
-                Tue <br />
-                ☀️ <br />
-                <span class="temperature"><b>17°C</b>/4°C</span>
-              </div>
-              <div class="col days">
-                Wed <br />
-                ⛅ <br />
-                <span class="temperature"><b>20°C</b>/7°C</span>
-              </div>
+            <div class="block-2">
+                <div class="block-2-section-1"><span id="highest-temp">32</span>°C<br>High</div>
+                <div class="block-2-section-2"><span id="lowest-temp">26</span>°C<br>Low</div>
+                <div class="block-2-section-3"><span id="wind">5</span> km/h<br>Wind</div>
+                <div class="block-2-section-4"><span id="feels-like">30</span>°C<br>Feels like</div>
+                <div class="block-2-section-5"><span id="humidity">49</span>%<br>Humidity</div>
+                <div class="block-2-section-6"><span id="pressure">10.19</span> inHg<br>Pressure</div>
             </div>
-          </div>
         </div>
-      </div>
+        <h2 class="this-week-header">This week</h2>
+        <div class="this-week-section">
+            <div class="day day-section-1">
+                <div class="day-name">Friday</div>
+                <div class="day-emoji"><img src="img/rain.png" alt="sunny-emoji"></div>
+                <div class="day-temperature">21°C/9°C</div>
+            </div>
+            <div class="day day-section-2">
+                <div class="day-name">Friday</div>
+                <div class="day-emoji"><img src="img/sun-cloud.png" alt="sunny-emoji"></div>
+                <div class="day-temperature">21°C/9°C</div>
+            </div>
+            <div class="day day-section-3">
+                <div class="day-name">Friday</div>
+                <div class="day-emoji"><img src="img/thunder.png" alt="sunny-emoji"></div>
+                <div class="day-temperature">21°C/9°C</div>
+            </div>
+            <div class="day day-section-4">
+                <div class="day-name">Friday</div>
+                <div class="day-emoji"><img src="img/night-clear-sky.png" alt="sunny-emoji"></div>
+                <div class="day-temperature">21°C/9°C</div>
+            </div>
+            <div class="day day-section-5">
+                <div class="day-name">Friday</div>
+                <div class="day-emoji"><img src="img/rain.png" alt="sunny-emoji"></div>
+                <div class="day-temperature">21°C/9°C</div>
+            </div>
+            <div class="day day-section-6">
+                <div class="day-name">Friday</div>
+                <div class="day-emoji"><img src="img/sun.png" alt="sunny-emoji"></div>
+                <div class="day-temperature">21°C/9°C</div>
+            </div>
+        </div>
     </div>
-    <script src="src/index.js"></script>
-  </body>
+    <script src="src/script.js"></script>
+</body>
 </html>
