--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
             </div>
         </div>
     </div>
+    <p class="open-source"><a href="https://github.com/marthaminash/weather-app1">Open-source code</a> by Martha Minash</p>
     <script src="src/script.js"></script>
 </body>
 </html>
