--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <h1 id="city">Lviv, UA</h1>
             <h2 id="day-hour">Thursday 15:44</h2>
             <div class="current-weather">
-                <div class="weather-emoji"><img src="img/sun.png" alt="sunny emoji"></div>
+                <div class="weather-emoji"><img src="img/sun.png" alt="Weather emoji" id="weather-emoji-picture"></div>
                 <div class="current-temperature"><span id="current-temperature-value">19</span>°C</div>
             </div>
             </div>
@@ -46,12 +46,12 @@
             </div>
             <div class="day day-section-2">
                 <div class="day-name">Friday</div>
-                <div class="day-emoji"><img src="img/sun-cloud.png" alt="sunny-emoji"></div>
+                <div class="day-emoji"><img src="img/Clouds.png" alt="sunny-emoji"></div>
                 <div class="day-temperature">21°C/9°C</div>
             </div>
             <div class="day day-section-3">
                 <div class="day-name">Friday</div>
-                <div class="day-emoji"><img src="img/thunder.png" alt="sunny-emoji"></div>
+                <div class="day-emoji"><img src="img/Clouds.png" alt="sunny-emoji"></div>
                 <div class="day-temperature">21°C/9°C</div>
             </div>
             <div class="day day-section-4">
@@ -66,12 +66,12 @@
             </div>
             <div class="day day-section-6">
                 <div class="day-name">Friday</div>
-                <div class="day-emoji"><img src="img/sun.png" alt="sunny-emoji"></div>
+                <div class="day-emoji"><img src="img/Clear.png" alt="sunny-emoji"></div>
                 <div class="day-temperature">21°C/9°C</div>
             </div>
         </div>
     </div>
-    <p class="open-source"><a href="https://github.com/marthaminash/weather-app1">Open-source code</a> by Martha Minash</p>
+    <p class="open-source"><a href="https://github.com/marthaminash/weather-app1" target="_blank">Open-source code</a> by Martha Minash</p>
     <script src="src/script.js"></script>
 </body>
 </html>
