--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <h2 id="day-hour">Thursday 15:44</h2>
             <div class="current-weather">
                 <div class="weather-emoji"><img src="img/sun.png" alt="Weather emoji" id="weather-emoji-picture"></div>
-                <div class="current-temperature"><span id="current-temperature-value">19</span>°C</div>
+                <div class="current-temperature"><span id="current-temperature-value">19</span><span id="current-unit-sign">°C</span></div>
             </div>
             </div>
             <div class="block-2">
@@ -35,6 +35,7 @@
                 <div class="block-2-section-4"><span id="feels-like">30</span>°C<br>Feels like</div>
                 <div class="block-2-section-5"><span id="humidity">49</span>%<br>Humidity</div>
                 <div class="block-2-section-6"><span id="pressure">10.19</span> inHg<br>Pressure</div>
+                <span class="unit-conversion-section"><a href="#" id="celsius-link" class="active">°C</a> | <a href="#" id="fahrenheit-link"><span>°F</span></a></span>
             </div>
         </div>
         <h2 class="this-week-header">This week</h2>
