--- a/index.html
+++ b/index.html
@@ -29,47 +29,16 @@
             </div>
             </div>
             <div class="block-2">
-                <div class="block-2-section-1"><span id="highest-temp">32</span>°C<br>High</div>
-                <div class="block-2-section-2"><span id="lowest-temp">26</span>°C<br>Low</div>
-                <div class="block-2-section-3"><span id="wind">5</span> km/h<br>Wind</div>
-                <div class="block-2-section-4"><span id="feels-like">30</span>°C<br>Feels like</div>
-                <div class="block-2-section-5"><span id="humidity">49</span>%<br>Humidity</div>
-                <div class="block-2-section-6"><span id="pressure">10.19</span> inHg<br>Pressure</div>
-                <span class="unit-conversion-section"><a href="#" id="celsius-link" class="active">°C</a> | <a href="#" id="fahrenheit-link"><span>°F</span></a></span>
+                <div class="block-2-section-1"><span id="highest-temp">32</span>°C<br><strong>High</strong></div>
+                <div class="block-2-section-2"><span id="lowest-temp">26</span>°C<br><strong>Low</strong></div>
+                <div class="block-2-section-3"><span id="wind">5</span> km/h<br><strong>Wind</strong></div>
+                <div class="block-2-section-4"><span id="feels-like">30</span>°C<br><strong>Feels like</strong></div>
+                <div class="block-2-section-5"><span id="humidity">49</span>%<br><strong>Humidity</strong></div>
+                <div class="block-2-section-6"><span id="pressure">10.19</span> inHg<br><strong>Pressure</strong></div>
             </div>
         </div>
         <h2 class="this-week-header">This week</h2>
         <div class="this-week-section">
-            <div class="day day-section-1">
-                <div class="day-name">Friday</div>
-                <div class="day-emoji"><img src="img/rain.png" alt="sunny-emoji"></div>
-                <div class="day-temperature">21°C/9°C</div>
-            </div>
-            <div class="day day-section-2">
-                <div class="day-name">Friday</div>
-                <div class="day-emoji"><img src="img/Clouds.png" alt="sunny-emoji"></div>
-                <div class="day-temperature">21°C/9°C</div>
-            </div>
-            <div class="day day-section-3">
-                <div class="day-name">Friday</div>
-                <div class="day-emoji"><img src="img/Clouds.png" alt="sunny-emoji"></div>
-                <div class="day-temperature">21°C/9°C</div>
-            </div>
-            <div class="day day-section-4">
-                <div class="day-name">Friday</div>
-                <div class="day-emoji"><img src="img/night-clear-sky.png" alt="sunny-emoji"></div>
-                <div class="day-temperature">21°C/9°C</div>
-            </div>
-            <div class="day day-section-5">
-                <div class="day-name">Friday</div>
-                <div class="day-emoji"><img src="img/rain.png" alt="sunny-emoji"></div>
-                <div class="day-temperature">21°C/9°C</div>
-            </div>
-            <div class="day day-section-6">
-                <div class="day-name">Friday</div>
-                <div class="day-emoji"><img src="img/Clear.png" alt="sunny-emoji"></div>
-                <div class="day-temperature">21°C/9°C</div>
-            </div>
         </div>
     </div>
     <p class="open-source"><a href="https://github.com/marthaminash/weather-app1" target="_blank">Open-source code</a> by Martha Minash</p>
